--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <title>моє життя</title>
     <body style="font-family: sans-serif">
     <header style="background-color:black;">
-    <h1 style="text-align:center;font-size: 50px; color:red"><img src="https://cdn.pixabay.com/photo/2017/10/03/15/56/heart-2812961_1280.png"width="40px" height="30px">моє життя(щоб знайти информацию натисніть на слова нижче 'тигра''соня''мурзя''адрес')</h1>
+    <h1 style="text-align:center;font-size: 50px; color:red"><img src="https://cdn.pixabay.com/photo/2017/10/03/15/56/heart-2812961_1280.png"width="40px" height="30px">моє життя(щоб знайти информацію  натисніть на слова нижче 'тигра''соня''мурзя''адрес')</h1>
     <a href="#тигра" style="color green; font-size:20px">тигра</a>
     <a href="#соня" style="color green; font-size:20px">соня</a>
     <a href="#мурзя" style="color green; font-size:20px">мурзя</a>
@@ -10,7 +10,7 @@
     </header>
     <main>
         <h2 style="font-size: 40px">мої тварини</h2>
-        <p><a style="font-size: 20px">у мене є три котика і курчата. Котиків звати 'тигра' 'соня' 'мурзя'. А у курчат... немає імен /:</a></p>
+        <p><a style="font-size: 20px">у мене є три котика і курчата. Котиків звати 'тигра' 'соня' 'мурзя'. А у курчат немає імен /:</a></p>
         <br/>
         <br/>
         <br/>
@@ -39,7 +39,7 @@
         <br/>
         <br/>
         <h1><h1 id="тигра">тигра</h1></h1>
-        <p><a style="font-size: 20px">тигра - найменший и крутий.Я його люблю дуже сильно.Він буває злий, але зазвичай лагідний.</a></p>
+        <p><a style="font-size: 20px">тигра - найменший  и крутий.Я його люблю дуже сильно.Він бувае злий, але зазвичай лагідний .</a></p>
         <br/>
         <br/>
         <br/>
@@ -68,7 +68,7 @@
         <br/>
         <br/>
         <h2><h1 id="соня">соня</h1></h2>
-        <p><a style="font-size: 20px">соня - дуже велика, вона найстарша в нас, Тигра є її кошеням, окрім нього було ще 4.2 загинуло,а 2 віддали</a></p>
+        <p><a style="font-size: 20px">соня - дуже велика вона найстарша в нас, а також окрім Тігри у неї було 4 кошеня. .2  загинуло, а 2  віддали і Тігра залишився з нами .</a></p>
         <br/>
         <br/>
         <br/>
@@ -97,7 +97,7 @@
         <br/>
         <br/>
         <h3><h1 id="мурзя">мурзя</h1></h3>
-        <p><a style"font-size: 20px">Мурзя - МОЯ УЛЮБЛЕНА КІШКА.Я її обожнюю.Цікавий факт - її ім'я було від мого першого кота 'мурзика'.</a></p>
+        <p><a style"font-size: 20px">Мурзя - МОЯ УЛЮБЛЕНА КІШКА.Я її обожнюю.Цікавий факт - її ім'я було від мого першого кота 'мурзика'.</p>
          <br/>
         <br/>
         <br/>
@@ -129,7 +129,7 @@
     <footer style="background-color:black">
         <table style="background-color:green; border:4px solid black ">
             <tr>
-                <td><a style="font-size:20px"><a id="адрес">номер телефону</a></a></td>
+                <td><a style="font-size:20px"><a id="адрес"> номер телефону </a></a></td>
             </tr>
             <tr>
                 <td><a style="font-size:20px">+380 99 286 3155</a></td>
