--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
     <body style="font-family: sans-serif">
     <header style="background-color:black;">
     <h1 style="text-align:center;font-size: 50px; color:red"><img src="https://cdn.pixabay.com/photo/2017/10/03/15/56/heart-2812961_1280.png"width="40px" height="30px">моє життя(щоб знайти информацію  натисніть на слова нижче 'тигра''соня''мурзя''адрес')</h1>
-    <a href="#тигра" style="color green; font-size:20px">тигра</a>
-    <a href="#соня" style="color green; font-size:20px">соня</a>
-    <a href="#мурзя" style="color green; font-size:20px">мурзя</a>
-    <a href="#адрес" style="color green; font-size:20px">адрес</a>
+    <a href="#тигра" style="color green; font-size:20px"><h3 style="font-size:50; color: red">тигра</h3></a>
+    <a href="#соня" style="color green; font-size:20px"><h3 style="font-size:50; color: red">соня</h3></a>
+    <a href="#мурзя" style="color green; font-size:20px"><h3 style="font-size:50; color: red">мурзя</h3></a>
+    <a href="#адрес" style="color green; font-size:20px"><h3 style="font-size:50; color: red">адрес</h3></a>
     </header>
     <main>
-        <h2 style="font-size: 40px">мої тварини</h2>
-        <p><a style="font-size: 20px">у мене є три котика і курчата. Котиків звати 'тигра' 'соня' 'мурзя'. А у курчат немає імен /:</a></p>
+        <h2 style="font-size: 40px"><i>мої тварини</i></h2>
+        <p><a style="font-size: 20px"><b>у мене є три котика і курчата. Котиків звати 'тигра' 'соня' 'мурзя'. А у курчат немає імен /:</b></a></p>
         <br/>
         <br/>
         <br/>
